@@ -6,4 +6,6 @@ set -o errexit
 set -o nounset
 set -o xtrace
 
-exec java ${JAVA_OPTS:-} -jar /srv/kixi.heimdall.jar --profile $PROFILE
+SANDBOX=${MESOS_SANDBOX:-"."}
+
+exec java -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -Xloggc:$SANDBOX/gc.log -XX:+PrintGCCause -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=3 -XX:GCLogFileSize=2M ${JAVA_OPTS:-} -jar /srv/kixi.heimdall.jar --profile $PROFILE
